# hexlet_flask

./: .gitignore  Makefile  README.md  amvera.yml  app_cart.py  data.py  flask_example.py  pyproject.toml  requirements.txt  save_users_to_json.py  users.json  validator.py
templates/: cookies_for_cart.html  login.html  user_details.html  user_edit.html  user_new.html  users.html
