[tool.poetry]
name = "flask-hexlet"
version = "0.1.0"
description = ""
authors = ["Vadim Turushev <orchanin90@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_hexlet"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
